--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,4 +29,4 @@ services:
     links: 
         - mongo
     working_dir: /home/app
-    command: npm run start
+    command: npm i && npm run start
